Initial commit of i18n exceptions.